--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 * {
   margin: 0;
   padding: 0;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 
   font-family: "Lato", sans-serif;
@@ -24,14 +25,26 @@ header {
   padding: 16px 10px;
   gap: 88px;
   margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
 }
 
 .menu__items {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
   gap: 34px;
   list-style: none;
@@ -57,8 +70,11 @@ header {
   bottom: -26px;
   width: 0;
   height: 4px;
+  background: -o-linear-gradient(176.8deg, #21a038 0%, #42dc6d 100%);
   background: linear-gradient(273.2deg, #21a038 0%, #42dc6d 100%);
   border-radius: 100px;
+  -webkit-transition: width 0.3s ease, left 0.3s ease;
+  -o-transition: width 0.3s ease, left 0.3s ease;
   transition: width 0.3s ease, left 0.3s ease;
 }
 
@@ -73,9 +89,18 @@ header {
 }
 
 .search__input {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
   flex-direction: row;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
   align-items: flex-start;
 
   position: relative;
@@ -99,8 +124,26 @@ header {
   position: absolute;
   right: 20px;
   top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
   transform: translateY(-50%);
   cursor: pointer;
+}
+
+.search__input input::-webkit-input-placeholder {
+  color: #828896;
+}
+
+.search__input input::-moz-placeholder {
+  color: #828896;
+}
+
+.search__input input:-ms-input-placeholder {
+  color: #828896;
+}
+
+.search__input input::-ms-input-placeholder {
+  color: #828896;
 }
 
 .search__input input::placeholder {
@@ -117,18 +160,29 @@ header {
 }
 
 .menu-icon__line {
+  -webkit-transition: opacity 0.3s ease, -webkit-transform 0.3s ease;
+  transition: opacity 0.3s ease, -webkit-transform 0.3s ease;
+  -o-transition: transform 0.3s ease, opacity 0.3s ease;
   transition: transform 0.3s ease, opacity 0.3s ease;
+  transition: transform 0.3s ease, opacity 0.3s ease,
+    -webkit-transform 0.3s ease;
 }
 
 .menu-icon__line--top {
+  -webkit-transform-origin: center;
+  -ms-transform-origin: center;
   transform-origin: center;
 }
 
 .menu-icon__line--bottom {
+  -webkit-transform-origin: center;
+  -ms-transform-origin: center;
   transform-origin: center;
 }
 
 .header__menu-icon.open .menu-icon__line--top {
+  -webkit-transform: rotate(45deg) translate(0px, 3px);
+  -ms-transform: rotate(45deg) translate(0px, 3px);
   transform: rotate(45deg) translate(0px, 3px);
 }
 
@@ -137,6 +191,8 @@ header {
 }
 
 .header__menu-icon.open .menu-icon__line--bottom {
+  -webkit-transform: rotate(-45deg) translate(-4px, -8px);
+  -ms-transform: rotate(-45deg) translate(-4px, -8px);
   transform: rotate(-45deg) translate(-4px, -8px);
   width: 20px;
 }
@@ -151,6 +207,7 @@ header {
   background-color: #fff;
   color: #000;
   padding: 50px 20px;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   z-index: 1000;
   text-align: center;
@@ -187,8 +244,16 @@ header {
   padding: 0 10px;
   margin: 0 auto;
 
+  display: -webkit-box;
+
+  display: -ms-flexbox;
+
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
 
   background: url(/img/home-bg.webp) no-repeat;
@@ -233,8 +298,14 @@ header {
 }
 
 .main__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
   align-items: start;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
   gap: 32px;
 }
@@ -248,8 +319,14 @@ aside {
 }
 
 .content__head {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
 
   margin-bottom: 30px;
@@ -271,13 +348,20 @@ aside {
   bottom: -8px;
   width: 100%;
   height: 4px;
+  background: -o-linear-gradient(176.8deg, #21a038 0%, #42dc6d 100%);
   background: linear-gradient(273.2deg, #21a038 0%, #42dc6d 100%);
   border-radius: 100px;
+  -webkit-transition: width 0.3s ease, left 0.3s ease;
+  -o-transition: width 0.3s ease, left 0.3s ease;
   transition: width 0.3s ease, left 0.3s ease;
 }
 
 .content__head-filter {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   gap: 8px;
 }
@@ -296,8 +380,13 @@ aside {
 }
 
 .content__body-cards {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   gap: 20px;
 }
@@ -334,7 +423,11 @@ aside {
 }
 
 .card__body-head {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   gap: 18px;
 
@@ -350,6 +443,7 @@ aside {
 .card__body-head .ava img {
   width: 100%;
   height: 100%;
+  -o-object-fit: cover;
   object-fit: cover;
   border-radius: 8px;
 }
@@ -360,7 +454,11 @@ aside {
 }
 
 .name__review {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   gap: 4px;
 }
@@ -409,6 +507,7 @@ aside {
   font-weight: normal;
   font-size: clamp(14px, 0.976vw, 16px);
   overflow: hidden;
+  -o-text-overflow: ellipsis;
   text-overflow: ellipsis;
   display: -webkit-box;
   -webkit-box-orient: vertical;
@@ -425,7 +524,11 @@ aside {
 }
 
 .card__body-btns {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   gap: 12px;
 }
@@ -451,7 +554,12 @@ aside {
 /* Aside */
 
 .sidebar__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   gap: 30px;
 }
@@ -484,14 +592,24 @@ aside {
 }
 
 .company__card {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
   align-items: start;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
   gap: 12px;
 }
 
 .company__card-top {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   gap: 12px;
 }
@@ -505,6 +623,7 @@ aside {
 .company__card-ava img {
   width: 100%;
   height: 100%;
+  -o-object-fit: cover;
   object-fit: cover;
   border-radius: 8px;
 }
@@ -522,7 +641,11 @@ aside {
 }
 
 .company__card-rating {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   gap: 4px;
 }
@@ -588,8 +711,14 @@ footer {
 
 .footer__head {
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
   gap: 60px;
   padding-bottom: 18px;
@@ -599,14 +728,24 @@ footer {
 .head__left {
   width: 100%;
   max-width: 780px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
   gap: 32px;
 }
 
 .footer__btns {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   gap: 14px;
 }
@@ -698,6 +837,9 @@ footer {
   }
 
   .sidebar__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
   }
 
@@ -706,6 +848,9 @@ footer {
   }
 
   .main__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+    -ms-flex-direction: column-reverse;
     flex-direction: column-reverse;
   }
 
@@ -716,6 +861,9 @@ footer {
   }
 
   .sidebar__container {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
     flex-direction: row;
   }
 
@@ -733,8 +881,15 @@ footer {
 
   .footer__container.tablet {
     max-width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
     align-items: start;
   }
 
@@ -746,8 +901,13 @@ footer {
   .footer__container.mobile .menu__items,
   .footer__container.tablet .menu__items {
     gap: 12px;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
     align-items: start;
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
     justify-content: start;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
   }
   .footer__container.mobile .menu__link::after,
@@ -762,6 +922,9 @@ footer {
   }
 
   .sidebar__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
   }
 
@@ -774,7 +937,12 @@ footer {
   }
 
   .content__head {
+    -webkit-box-align: start;
+    -ms-flex-align: start;
     align-items: start;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
     gap: 20px;
   }
@@ -784,6 +952,8 @@ footer {
     border: 1px solid #e6e7ea;
     padding: 9px;
     border-radius: 8px;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
   }
 
@@ -792,13 +962,22 @@ footer {
   }
 
   .footer__container.mobile {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
   }
 
   .footer__container.mobile {
     max-width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
     align-items: start;
   }
 
